# chess-stats

./: .gitignore  README.md  pyproject.toml  pytest.ini  tox.ini
chess_stats/: main.py  models.py
src/chess_stats/: chess_stats.py  console.py
src/chess_stats/models/: __init__.py  annual_summary.py  chess_dot_com_adapter.py  game.py  player.py
test/: common.py  test_chess_dot_com_client.py  test_chess_stats.py  test_console.py  test_game.py
test/fixtures/: game.json  games-2020-08.json  games.json
